# Misinformation-Agent-Simulation

./: .gitignore  ARCHITECTURE.md  BREAKTHROUGH_INNOVATIONS.md  CONTRIBUTING.md  README.md  pyproject.toml
configs/: world_baseline.yaml  world_collapsed_local_media.yaml  world_high_religion_hub.yaml  world_high_trust_gov.yaml  world_low_trust_gov.yaml  world_outrage_algorithm.yaml  world_strong_moderation.yaml
docs/: METHODS.md
scripts/: comprehensive_validation.py  figure_data.py  heterogeneity_analysis.py  longterm_validation.py  nature_validation.py  network_analysis.py  reproducibility_test.py  robustness_check.py  run_validation.py  statistical_tests.py  temporal_analysis.py
sim/: __init__.py  cli.py  config.py  rng.py  simulation.py  simulation_advanced.py
sim/analysis/: __init__.py  aggregate.py
sim/calibration/: __init__.py  abc.py  empirical_targets.py  priors.py  validation.py
sim/cascades/: __init__.py  analysis.py  r_effective.py  tracker.py
sim/cognition/: __init__.py  attention.py  dual_process.py  motivated_reasoning.py  source_memory.py
sim/dashboard/: app.py
sim/disease/: __init__.py  belief_update_advanced.py  belief_update_torch.py  exposure.py  operator.py  sharing.py  strains.py
sim/dynamics/: __init__.py  influence.py  network_evolution.py
sim/io/: metadata.py  plots.py  snapshot.py
sim/metrics/: __init__.py  advanced_metrics.py  metrics.py  penetration.py  r0.py  (+1 more)
tests/: test_belief_update.py  test_config.py  test_metrics_gpu.py  test_networks.py  test_reproducibility.py  test_town.py
validation_results/: NATURE_SUMMARY.md
(+13 files in other folders)
